tests/ui/type-alias-impl-trait/define_opaques_attr/no_opaque.stderr
error: item does not contain any opaque types
  --> $DIR/no_opaque.rs:5:17
   |
LL | #[define_opaque(Thing)]
   |                 ^^^^^

error: aborting due to 1 previous error

